<resources>
    <string name="app_name">Vocal</string>
    <string name="Pizza">pizza</string>
    <string name="Milk">milk</string>
    <string name="Pasta">pasta</string>
    <string name="Delete">delete</string>
    <string name="Clear">clear</string>
    <string name="Go">go</string>
    <string name="Food">food</string>
    <string name="Chips">chips</string>
    <string name="Cake">cake</string>
    <string name="Apple">apple</string>
    <string name="Emotions">emotions</string>
    <string name="Sad">sad</string>
    <string name="Happy">happy</string>
    <string name="Mad">mad</string>
    <string name="Excited">excited</string>
    <string name="Angry">angry</string>
    <string name="Scared">scared</string>
    <string name="Mom">mom</string>
    <string name="Sister">sister</string>
    <string name="Brother">brother</string>
    <string name="Dad">dad</string>
    <string name="Teacher">teacher</string>
    <string name="Doctor">doctor</string>
    <string name="Friend">friend</string>
    <string name="Questions">questions</string>
    <string name="Who">who</string>
    <string name="What">what</string>
    <string name="When">when</string>
    <string name="Where">where</string>
    <string name="Why">why</string>
    <string name="How">how</string>
    <string name="People">people</string>
    <string name="Verbs">verbs</string>
    <string name="Is">is</string>
    <string name="I">i</string>
    <string name="Do">do</string>
    <string name="Need">need</string>
    <string name="Have">have</string>
    <string name="Want">want</string>
    <string name="Come">come</string>
    <string name="Get">get</string>
    <string name="Pronouns">pronouns</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Submit">Submit</string>
    <string name="Username">Username</string>
    <string name="Custom">Custom</string>
    <string name="Places">Places</string>
    <string name="TODO">TODO</string>
    <string name="stop">stop</string>
    <string name="Holidays">Holidays</string>
    <string name="Travel">travel</string>
    <string name="vacation">vacation</string>
    <string name="PurchaseaWordPackage">Purchase a Word Package</string>
    <string name="InAppPurchases">In App Purchases</string>
    <string name="UpgradeToPremium">Upgrade to Premium</string>
    <string name="PurchasePackages">Purchase Selected Package(s)</string>
</resources>