<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".VerbsActivity">

    <Button
        android:id="@+id/btnWant"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/Want"
        app:layout_constraintBottom_toBottomOf="@+id/btnHave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDo"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnHave"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/Have"
        app:layout_constraintEnd_toStartOf="@+id/btnWant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIs" />

    <Button
        android:id="@+id/btnNeed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Need"
        app:layout_constraintBottom_toBottomOf="@+id/btnIs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toEndOf="@+id/btnDo"
        app:layout_constraintTop_toTopOf="@+id/btnIs"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnIs"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:text="@string/Is"
        app:layout_constraintEnd_toStartOf="@+id/btnDo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSentence5" />

    <Button
        android:id="@+id/btnDo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="@string/Do"
        app:layout_constraintBottom_toTopOf="@+id/btnCome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnIs"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/btnCome"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        android:text="@string/Come"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/btnWant"
        app:layout_constraintTop_toBottomOf="@+id/btnNeed" />

    <Button
        android:id="@+id/btnGet"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/Get"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWant" />

    <Button
        android:id="@+id/btnClear6"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:backgroundTint="#FD0000"
        android:onClick="clear"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/Clear"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/btnDelete6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDelete6"
        app:layout_constraintTop_toTopOf="@+id/txtSentence5" />

    <Button
        android:id="@+id/btnDelete6"
        android:layout_width="71dp"
        android:layout_height="48dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="#FF7B23"
        android:onClick="delete"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/Delete"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/txtSentence5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtSentence5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtSentence5"
        android:layout_width="219dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/btnDelete6"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>