<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:background="#000000"
    tools:context=".FoodActivity">

    <Button
        android:id="@+id/btnGo3"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2AD324"
        android:text="@string/Go"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSentence"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF7B23"
        android:onClick="delete"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/Delete"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGo3" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FD0000"
        android:onClick="clear"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/Clear"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnWho"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnClick"
        android:tag="@string/Who"
        android:text="@string/Who"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSentence"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnWhat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnClick"
        android:tag="@string/What"
        android:text="@string/What"
        app:layout_constraintBottom_toBottomOf="@+id/btnWho"
        app:layout_constraintStart_toEndOf="@+id/btnWho"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnWhen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnClick"
        android:tag="@string/When"
        android:text="@string/When"
        app:layout_constraintBottom_toBottomOf="@+id/btnWhat"
        app:layout_constraintStart_toEndOf="@+id/btnWhat"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnWhy"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnClick"
        android:tag="@string/Why"
        android:text="@string/Why"
        app:layout_constraintStart_toEndOf="@+id/btnWhere"
        app:layout_constraintTop_toBottomOf="@+id/txtSentence"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnWhere"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnClick"
        android:tag="where"
        android:text="@string/Where"
        app:layout_constraintStart_toEndOf="@+id/btnWhen"
        app:layout_constraintTop_toBottomOf="@+id/txtSentence"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnHow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="btnClick"
        android:tag="how"
        android:text="how"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWho"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>