<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#000000"
    android:foregroundGravity="fill_horizontal"
    tools:context=".MainActivity"
    tools:ignore="MissingDefaultResource"
    xsi:schemaLocation="http://schemas.android.com/apk/res/android
http://schemas.android.com/apk/res-auto
http://schemas.android.com/tools ">

    <TextView
        android:id="@+id/txtSentence"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/btnGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2AD324"
        android:onClick="go"
        android:text="@string/Go"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF7B23"
        android:onClick="delete"
        android:text="@string/Delete"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGo" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FD0000"
        android:onClick="clear"
        android:text="@string/Clear"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <Button
        android:id="@+id/btnVerbs"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/new_new_verb_folder_removebg_preview__2_"
        android:includeFontPadding="false"
        android:onClick="openVerbsKeyboard"
        android:text="@string/Verbs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPeople"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <Button
        android:id="@+id/btnPeople"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/untitled_artwork_1_removebg_preview__2_"
        android:includeFontPadding="false"
        android:onClick="openPeopleKeyboard"
        android:text="@string/People"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEmotions"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <Button
        android:id="@+id/btnFood"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/littlefoodfolder"
        android:includeFontPadding="false"
        android:onClick="openFoodKeyboard"
        android:text="@string/Food"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <Button
        android:id="@+id/btnEmotions"
        android:layout_width="120dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/emotions"
        android:onClick="openEmotionsKeyboard"
        android:text="@string/Emotions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnFood"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />

</androidx.constraintlayout.widget.ConstraintLayout>