<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#000000"
    android:background="#000000"
    tools:context=".FoodActivity">

    <Button
        android:id="@+id/btnGo3"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2AD324"
        android:text="@string/Go"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtSentence"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF7B23"
        android:onClick="delete"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/Delete"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGo3" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FD0000"
        android:onClick="clear"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/Clear"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnFamily"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/pizza"
        android:onClick="btnClick"
        android:tag="pizza"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSentence"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnMother"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/milk"
        android:onClick="btnClick"
        android:tag="milk"
        app:layout_constraintBottom_toBottomOf="@+id/btnFamily"
        app:layout_constraintStart_toEndOf="@+id/btnFamily"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnSister"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/pasta"
        android:onClick="btnClick"
        android:tag="pasta"
        app:layout_constraintBottom_toBottomOf="@+id/btnMother"
        app:layout_constraintStart_toEndOf="@+id/btnMother"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnBrother"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/cake__1__removebg_preview"
        android:onClick="btnClick"
        android:tag="cake"
        app:layout_constraintStart_toEndOf="@+id/btnFather"
        app:layout_constraintTop_toBottomOf="@+id/txtSentence"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnFather"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/chips"
        android:onClick="btnClick"
        android:tag="chips"
        app:layout_constraintStart_toEndOf="@+id/btnSister"
        app:layout_constraintTop_toBottomOf="@+id/txtSentence"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnDoctor"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#000000"
        android:foreground="@drawable/apple"
        android:onClick="btnClick"
        android:tag="apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFamily"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>